--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,4 +1,4 @@
-/* To learn more about this file see: https://angular.io/config/tsconfig. */
+ /* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
   "compileOnSave": false,
   "compilerOptions": {
@@ -16,6 +16,7 @@
     "importHelpers": true,
     "target": "es2017",
     "module": "es2020",
+   // "strictPropertyInitialization": false,
     "lib": [
       "es2018",
       "dom"
