--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -24,6 +24,7 @@
   },
   "angularCompilerOptions": {
     "strictNullChecks": false,
+    "noImplicitAny": false,
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
