--- a/API/API.csproj
+++ b/API/API.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1"/>
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.1.4"/>
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.1.4"/>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.10"/>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj"/>
